@@ -1,5 +1,8 @@
 -   Starter pack bonus decreased from 20% to 15%
 -   Increased building prices for replicators and nuke
+-   Increased components prices of drones
+-   Increase components gain from Enemies
+-   New research "Assimilation"; +100% Components from enemies, repeatable
 -   Fixed spells not auto casting
 
 23/08/2020
